# rs-test-serde-with-rc

./: Cargo.toml  README.md
src/: main.rs
