[package]
name = "rs-test-serde-with-rc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.56"
# serde = "1.0.114"
serde_derive = "1.0.114"
clap = "3.0.0-beta.1"
serde = { version = "1.0", features = ["rc"] }

